add: final cta; fix: css variables for redundant gap and padding values + contents class standarization.

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -121,7 +121,7 @@
 				<div class="section_header">
 					<h2 data-i18n="services.title">Servicios</h2>
 				</div>
-				<div class="services_grid">
+				<div class="services_content">
 					<a href="#servicios" class="service_card">
 						<div class="service_icon">
 							<span class="material-icons">business</span>
@@ -157,7 +157,7 @@
 				<div class="section_header">
 					<h2 data-i18n="process.title">Verificación rápida y confiable con tecnología de punta</h2>
 				</div>
-				<div class="process_steps">
+				<div class="process_content">
 					<div class="process_step">
 						<div class="step_icon">
 							<img src="/public/svg/doc-upload.svg" alt="Document Upload">
@@ -256,12 +256,25 @@
 			<div id="cta" class="page_section fraud_container">
 				<div class="fraud_content">
 					<div class="fraud_text">
-						<h2 data-i18n="fraud.title" class="text_med">Evita el fraude y toma mejores decisiones</h2>
+						<h2 data-i18n="fraud.title">Evita el fraude y toma mejores decisiones</h2>
 						<p data-i18n="fraud.description">Verifica la identidad de cualquier persona y empresa para poder agilizar tus procesos de onboarding o alta de investigación, disminuyendo el fraude en tu empresa y ahorrando tiempo y dinero</p>
 						<a href="#demo" class="custom_cta blue text_med" data-i18n="fraud.demo">Solicitar Demo</a>
 					</div>
 					<div class="fraud_image">
 						<img src="/public/svg/evade-fraud.svg" alt="Fraud Prevention Illustration">
+					</div>
+				</div>
+			</div>
+
+			<div class="page_section recover_container">
+				<div class="section_header no_mt">
+					<h2 data-i18n="recover.title">¿Listo para recuperar la Confianza?</h2>
+				</div>
+				<div class="recover_content">
+					<p><i data-i18n="recover.description.1">Únete a las empresas que confían en</i><span></span><i data-i18n="recover.description.2">para validar identidades de manera segura y eficiente.</i></p>
+					<div class="recover_ctas">
+						<a href="#demo" class="custom_cta blue text_med" data-i18n="recover.demo">Solicitar Demo Gratuito</a>
+						<a href="#contacto" class="custom_cta green text_med" data-i18n="recover.expert">Hablar con un Experto</a>
 					</div>
 				</div>
 			</div>
