rest of commit...

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -53,10 +53,10 @@
 					<a href="/" class="logo"></a>
 				</div>
 				<ul>
-          <li class="nav_tab"><a href="#inicio" data-i18n="nav.inicio" class="nav_link text_med">Inicio</a></li>
-          <li class="nav_tab"><a href="#servicios" data-i18n="nav.servicios" class="nav_link text_med">Servicios</a></li>
-          <li class="nav_tab"><a href="#casos" data-i18n="nav.casos" class="nav_link text_med">Casos de uso</a></li>
-          <li class="nav_tab"><a href="#contacto" data-i18n="nav.contacto" class="nav_link text_med">Contacto</a></li>
+          <li class="nav_tab"><a href="/" data-i18n="nav.inicio" class="nav_link text_med">Inicio</a></li>
+          <li class="nav_tab"><a href="/services" data-i18n="nav.servicios" class="nav_link text_med">Servicios</a></li>
+          <li class="nav_tab"><a href="/cases" data-i18n="nav.casos" class="nav_link text_med">Casos de uso</a></li>
+          <li class="nav_tab"><a href="/contact" data-i18n="nav.contacto" class="nav_link text_med">Contacto</a></li>
 					<li class="nav_tab">
             <a 
 							id="language-switcher"
@@ -80,13 +80,13 @@
 
 		<div class="drawer_content">
 			<ul>
-				<li><a href="#inicio" data-i18n="nav.inicio" class="nav_link">Inicio</a></li>
+				<li><a href="/" data-i18n="nav.inicio" class="nav_link">Inicio</a></li>
 				<hr />
-				<li><a href="#servicios" data-i18n="nav.servicios" class="nav_link">Servicios</a></li>
+				<li><a href="/services" data-i18n="nav.servicios" class="nav_link">Servicios</a></li>
 				<hr />
-				<li><a href="#casos" data-i18n="nav.casos" class="nav_link">Casos de uso</a></li>
+				<li><a href="/cases" data-i18n="nav.casos" class="nav_link">Casos de uso</a></li>
 				<hr />
-				<li><a href="#contacto" data-i18n="nav.contacto" class="nav_link">Contacto</a></li>
+				<li><a href="/contact" data-i18n="nav.contacto" class="nav_link">Contacto</a></li>
 				<hr />
 				<li>
 					<a 
@@ -113,7 +113,7 @@
 				</div>
 				<div class="hero_cta">
           <a type="button" href="#demo" class="custom_cta blue text_med" data-i18n="hero.demo">Solicitar Demo</a>
-          <a type="button" href="#servicios" class="custom_cta green text_med" data-i18n="hero.services">Servicios</a>
+          <a type="button" href="/services" class="custom_cta green text_med" data-i18n="hero.services">Servicios</a>
         </div>
 			</div>
 
@@ -122,28 +122,28 @@
 					<h2 data-i18n="services.title">Servicios</h2>
 				</div>
 				<div class="services_content">
-					<a href="#servicios" class="service_card">
+					<a href="/services" class="service_card">
 						<div class="service_icon">
 							<span class="material-icons">business</span>
 						</div>
 						<h4 data-i18n="services.suppliers.title" class="text_med">Alta de Proveedores</h4>
 						<p data-i18n="services.suppliers.description">Valida la identidad de nuevos proveedores y evita fraudes o malas relaciones.</p>
 					</a>
-					<a href="#servicios" class="service_card">
+					<a href="/services" class="service_card">
 						<div class="service_icon">
 							<span class="material-icons">person_add</span>
 						</div>
 						<h4 data-i18n="services.clients.title" class="text_med">Alta de Clientes</h4>
 						<p data-i18n="services.clients.description">Valida el perfil de tus clientes asegurando que sean de confianza para cumplir con sus pagos.</p>
 					</a>
-					<a href="#servicios" class="service_card">
+					<a href="/services" class="service_card">
 						<div class="service_icon">
 							<span class="material-icons">badge</span>
 						</div>
 						<h4 data-i18n="services.personnel.title" class="text_med">Alta de Personal</h4>
 						<p data-i18n="services.personnel.description">Incorpora empleados rápidamente y calcula su nivel de riesgo y confianza.</p>
 					</a>
-					<a href="#servicios" class="service_card">
+					<a href="/services" class="service_card">
 						<div class="service_icon">
 							<span class="material-icons">tune</span>
 						</div>
@@ -188,22 +188,22 @@
 				</div>
 				<div class="cases_content">
 					<div class="cases_grid">
-						<a href="#casos" class="case_item">
+						<a href="/cases" class="case_item">
 							<h4 data-i18n="cases.kyc" class="text_med">KYC/KYB</h4>
 						</a>
-						<a href="#casos" class="case_item">
+						<a href="/cases" class="case_item">
 							<h4 data-i18n="cases.financial" class="text_med">Servicios Financieros</h4>
 						</a>
-						<a href="#casos" class="case_item">
+						<a href="/cases" class="case_item">
 							<h4 data-i18n="cases.transport" class="text_med">Transporte y Logística</h4>
 						</a>
-						<a href="#casos" class="case_item">
+						<a href="/cases" class="case_item">
 							<h4 data-i18n="cases.ecommerce" class="text_med">E-commerce</h4>
 						</a>
-						<a href="#casos" class="case_item">
+						<a href="/cases" class="case_item">
 							<h4 data-i18n="cases.construction" class="text_med">Construcción</h4>
 						</a>
-						<a href="#casos" class="case_item">
+						<a href="/cases" class="case_item">
 							<h4 data-i18n="cases.hr" class="text_med">Recursos Humanos</h4>
 						</a>
 					</div>
