--- a/public/html/index.html
+++ b/public/html/index.html
@@ -53,10 +53,9 @@
 					<a href="/" class="logo"></a>
 				</div>
 				<ul>
-          <li class="nav_tab"><a href="/" data-i18n="nav.inicio" class="nav_link text_med">Inicio</a></li>
+          <li class="nav_tab"><a href="/" data-i18n="nav.home" class="nav_link active_tab text_med">Inicio</a></li>
           <li class="nav_tab"><a href="/services" data-i18n="nav.servicios" class="nav_link text_med">Servicios</a></li>
           <li class="nav_tab"><a href="/cases" data-i18n="nav.casos" class="nav_link text_med">Casos de uso</a></li>
-          <li class="nav_tab"><a href="/contact" data-i18n="nav.contacto" class="nav_link text_med">Contacto</a></li>
 					<li class="nav_tab">
             <a 
 							id="language-switcher"
@@ -69,7 +68,7 @@
 						</a>
           </li>
           <li class="nav_tab custom_cta custom_cta_xs primary primary_sm">
-            <a href="#demo" data-i18n="nav.demo" class="nav_link">Solicitar Demo</a>
+            <a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="nav.demo" class="nav_link">Solicitar Demo</a>
           </li>
 					<li class="nav_tab">
           </li>
@@ -80,13 +79,11 @@
 
 		<div class="drawer_content">
 			<ul>
-				<li><a href="/" data-i18n="nav.inicio" class="nav_link">Inicio</a></li>
+				<li><a href="/" data-i18n="nav.home" class="nav_link active_tab">Inicio</a></li>
 				<hr />
 				<li><a href="/services" data-i18n="nav.servicios" class="nav_link">Servicios</a></li>
 				<hr />
 				<li><a href="/cases" data-i18n="nav.casos" class="nav_link">Casos de uso</a></li>
-				<hr />
-				<li><a href="/contact" data-i18n="nav.contacto" class="nav_link">Contacto</a></li>
 				<hr />
 				<li>
 					<a 
@@ -100,7 +97,7 @@
 					</a>
 				</li>
 				<hr />
-				<li><a href="/#demo" data-i18n="nav.demo" class="text_med">Solicitar Demo</a></li>
+				<li><a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="nav.demo" class="text_med">Solicitar Demo</a></li>
 				<hr />
 			</ul>
 		</div>
@@ -112,7 +109,7 @@
 					<p data-i18n="hero.description">Valida la identidad de cualquier empresa o persona en México agilizando tu proceso de onboarding o alta de proveedores/clientes.</p>
 				</div>
 				<div class="hero_cta">
-          <a type="button" href="#demo" class="custom_cta blue text_med" data-i18n="hero.demo">Solicitar Demo</a>
+          <a type="button" href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="hero.demo" class="custom_cta blue text_med">Solicitar Demo</a>
           <a type="button" href="/services" class="custom_cta green text_med" data-i18n="hero.services">Servicios</a>
         </div>
 			</div>
@@ -258,7 +255,7 @@
 					<div class="fraud_text">
 						<h2 data-i18n="fraud.title">Evita el fraude y toma mejores decisiones</h2>
 						<p data-i18n="fraud.description">Verifica la identidad de cualquier persona y empresa para poder agilizar tus procesos de onboarding o alta de investigación, disminuyendo el fraude en tu empresa y ahorrando tiempo y dinero</p>
-						<a href="#demo" class="custom_cta blue text_med" data-i18n="fraud.demo">Solicitar Demo</a>
+						<a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="fraud.demo" class="custom_cta blue text_med">Solicitar Demo</a>
 					</div>
 					<div class="fraud_image">
 						<img src="/public/svg/evade-fraud.svg" alt="Fraud Prevention Illustration">
@@ -273,8 +270,8 @@
 				<div class="recover_content">
 					<p><i data-i18n="recover.description.1">Únete a las empresas que confían en</i><span></span><i data-i18n="recover.description.2">para validar identidades de manera segura y eficiente.</i></p>
 					<div class="recover_ctas">
-						<a href="#demo" class="custom_cta blue text_med" data-i18n="recover.demo">Solicitar Demo Gratuito</a>
-						<a href="#contacto" class="custom_cta green text_med" data-i18n="recover.expert">Hablar con un Experto</a>
+						<a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="recover.demo" class="custom_cta blue text_med">Solicitar Demo Gratuito</a>
+						<a href="https://wa.link/jvug6z" target="_blank" data-i18n="recover.expert" class="custom_cta green text_med">Hablar con un Experto</a>
 					</div>
 				</div>
 			</div>
@@ -288,9 +285,9 @@
 				</div>
 				<div class="footer_section">
 					<ul>
-						<li><a href="mailto:info@fidelio.com"><span class="material-icons blue">mail</span>info@fidelio.com</a></li>
-						<li><a href="tel:+11234567890"><span class="material-icons blue">phone</span>+1 (123) 456-7890</a></li>
-						<li><span class="material-icons blue">location_on</span>123 Business Ave, Suite 100 City, State 12345</li>
+						<li><a href="mailto:contacto@fidelio.com.mx"><span class="material-icons blue">mail</span>contacto@fidelio.com.mx</a></li>
+						<li><a href="tel:+529212733562"><span class="material-icons blue">phone</span>+52 921 273 3562</a></li>
+						<li><span class="material-icons blue">location_on</span>Av. Alfonso Reyes 235, Bosques del Valle, San Pedro Garza García, N.L.</li>
 						<li class="copyright">© 2025<span></span>All rights reserved.</li>
 					</ul>
 				</div>
@@ -298,7 +295,7 @@
 		</footer>
 
 		<div class="whatsapp_container">
-			<a href="https://wa.me/11234567890" target="_blank" rel="noopener noreferrer" class="whatsapp_float" aria-label="Chat on WhatsApp">
+			<a href="https://wa.link/jvug6z" target="_blank" rel="noopener noreferrer" class="whatsapp_float" aria-label="Chat on WhatsApp">
 				<svg viewBox="0 0 24 24" class="whatsapp_icon">
 					<path fill="currentColor" d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
 				</svg>
