--- a/public/html/services.html
+++ b/public/html/services.html
@@ -4,25 +4,25 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Casos de Uso - fidelio</title>
-		<meta name="description" content="Casos de uso para verificación de identidad y prevención de fraudes" />
+		<title>Servicios | fidelio</title>
+		<meta name="description" content="Servicios de verificación de identidad y prevención de fraudes" />
 		<meta name="robots" content="all">
 		<link rel="icon" href="/public/favicon.ico" type="image/x-icon">
 		<meta
 				property="og:title"
-				content="Casos de Uso - fidelio"
+				content="Servicios | fidelio"
 		/>
 		<meta
 				property="og:description"
-				content="Casos de uso para verificación de identidad y prevención de fraudes"
+				content="Servicios de verificación de identidad y prevención de fraudes"
 		/>
 		<meta property="og:locale" content="es"/>
 		<meta property="og:site_name" content="fidelio"/>
-		<meta property="og:url" content="https://fidelio.com/services"/>
+		<meta property="og:url" content="https://fidelio.com.mx/services"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="/public/img/og-default.png"/>
-		<meta name="keywords" content="casos de uso, verificación, identidad, proveedores, clientes, recursos humanos, flujo personalizado" />
-		<link rel="canonical" href="https://fidelio.com/services" />
+		<meta name="keywords" content="verificación, identidad, fraude, prevención, KYC, KYB, onboarding, proveedores, clientes, recursos humanos, flujo personalizado" />
+		<link rel="canonical" href="https://fidelio.com.mx/services" />
 		<link rel="preload" href="/public/css/reset.css" as="style"/>
 		<link rel="preload" href="/public/css/global.css" as="style"/>
 		<link rel="preload" href="/public/css/main.css" as="style"/>
@@ -53,10 +53,9 @@
 					<a href="/" class="logo"></a>
 				</div>
 				<ul>
-          <li class="nav_tab"><a href="/" data-i18n="nav.inicio" class="nav_link text_med">Inicio</a></li>
-          <li class="nav_tab"><a href="/services" data-i18n="nav.servicios" class="nav_link text_med">Servicios</a></li>
+          <li class="nav_tab"><a href="/" data-i18n="nav.home" class="nav_link text_med">Inicio</a></li>
+          <li class="nav_tab"><a href="/services" data-i18n="nav.servicios" class="nav_link active_tab text_med">Servicios</a></li>
           <li class="nav_tab"><a href="/cases" data-i18n="nav.casos" class="nav_link text_med">Casos de uso</a></li>
-          <li class="nav_tab"><a href="/#contacto" data-i18n="nav.contacto" class="nav_link text_med">Contacto</a></li>
 					<li class="nav_tab">
             <a 
 							id="language-switcher"
@@ -69,7 +68,7 @@
 						</a>
           </li>
           <li class="nav_tab custom_cta custom_cta_xs primary primary_sm">
-            <a href="/#demo" data-i18n="nav.demo" class="nav_link">Solicitar Demo</a>
+            <a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="nav.demo" class="nav_link">Solicitar Demo</a>
           </li>
 					<li class="nav_tab">
           </li>
@@ -80,13 +79,11 @@
 
 		<div class="drawer_content">
 			<ul>
-				<li><a href="/" data-i18n="nav.inicio" class="nav_link">Inicio</a></li>
+				<li><a href="/" data-i18n="nav.home" class="nav_link">Inicio</a></li>
 				<hr />
-				<li><a href="/services" data-i18n="nav.servicios" class="nav_link">Servicios</a></li>
+				<li><a href="/services" data-i18n="nav.servicios" class="nav_link active_tab">Servicios</a></li>
 				<hr />
 				<li><a href="/cases" data-i18n="nav.casos" class="nav_link">Casos de uso</a></li>
-				<hr />
-				<li><a href="/#contacto" data-i18n="nav.contacto" class="nav_link">Contacto</a></li>
 				<hr />
 				<li>
 					<a 
@@ -100,7 +97,7 @@
 					</a>
 				</li>
 				<hr />
-				<li><a href="/#demo" data-i18n="nav.demo" class="text_med">Solicitar Demo</a></li>
+				<li><a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="nav.demo" class="text_med">Solicitar Demo</a></li>
 				<hr />
 			</ul>
 		</div>
@@ -116,7 +113,7 @@
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.suppliers.feature2">Investigación de antecedentes penales</span></li>
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.suppliers.feature3">Reporte sobre análisis de riesgo</span></li>
 						</ul>
-						<a href="#demo" class="custom_cta blue text_med" data-i18n="service.suppliers.cta">Ver como funciona</a>
+						<a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="service.suppliers.cta" class="custom_cta blue text_med">Ver como funciona</a>
 					</div>
 					<div class="service_detail_image">
 						<img src="/public/svg/validate-providers.svg" alt="Supplier Validation Illustration">
@@ -134,7 +131,7 @@
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.clients.feature2">Investigación de antecedentes penales</span></li>
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.clients.feature3">Reporte sobre análisis de riesgo</span></li>
 						</ul>
-						<a href="#demo" class="custom_cta blue text_med" data-i18n="service.clients.cta">Ver como funciona</a>
+						<a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="service.clients.cta" class="custom_cta blue text_med">Ver como funciona</a>
 					</div>
 					<div class="service_detail_image">
 						<img src="/public/svg/validate-clients.svg" alt="Client Validation Illustration">
@@ -152,7 +149,7 @@
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.hr.feature2">Reporte detallado sobre su perfil completo</span></li>
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.hr.feature3">Validación de datos biométricos y pruebas de vida</span></li>
 						</ul>
-						<a href="#demo" class="custom_cta blue text_med" data-i18n="service.hr.cta">Ver como funciona</a>
+						<a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="service.hr.cta" class="custom_cta blue text_med">Ver como funciona</a>
 					</div>
 					<div class="service_detail_image">
 						<img src="/public/svg/human-resources.svg" alt="HR Validation Illustration">
@@ -170,7 +167,7 @@
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.custom.feature2">Integración con sistemas existentes</span></li>
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.custom.feature3">Reportes avanzados instantáneamente</span></li>
 						</ul>
-						<a href="#demo" class="custom_cta blue text_med" data-i18n="service.custom.cta">Ver como funciona</a>
+						<a href="https://calendly.com/fernando-fidelio/30min" target="_blank" data-i18n="service.custom.cta" class="custom_cta blue text_med">Ver como funciona</a>
 					</div>
           <div class="service_detail_image">
 						<img src="/public/svg/custom-flow.svg" alt="Custom Flow Illustration">
@@ -187,9 +184,9 @@
 				</div>
 				<div class="footer_section">
 					<ul>
-						<li><a href="mailto:info@fidelio.com"><span class="material-icons blue">mail</span>info@fidelio.com</a></li>
-						<li><a href="tel:+11234567890"><span class="material-icons blue">phone</span>+1 (123) 456-7890</a></li>
-						<li><span class="material-icons blue">location_on</span>123 Business Ave, Suite 100 City, State 12345</li>
+						<li><a href="mailto:contacto@fidelio.com.mx"><span class="material-icons blue">mail</span>contacto@fidelio.com.mx</a></li>
+						<li><a href="tel:+529212733562"><span class="material-icons blue">phone</span>+52 921 273 3562</a></li>
+						<li><span class="material-icons blue">location_on</span>Av. Alfonso Reyes 235, Bosques del Valle, San Pedro Garza García, N.L.</li>
 						<li class="copyright">© 2025<span></span>All rights reserved.</li>
 					</ul>
 				</div>
@@ -197,7 +194,7 @@
 		</footer>
 
 		<div class="whatsapp_container">
-			<a href="https://wa.me/11234567890" target="_blank" rel="noopener noreferrer" class="whatsapp_float" aria-label="Chat on WhatsApp">
+			<a href="https://wa.link/jvug6z" target="_blank" rel="noopener noreferrer" class="whatsapp_float" aria-label="Chat on WhatsApp">
 				<svg viewBox="0 0 24 24" class="whatsapp_icon">
 					<path fill="currentColor" d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
 				</svg>
