fix: footer description translation

--- a/public/html/services.html
+++ b/public/html/services.html
@@ -180,7 +180,7 @@
 			<div class="footer_content">
 				<div class="footer_section">
 					<div class="footer_logo"></div>
-					<p data-i18n="cta.description" class="footer_description">Verifica la identidad de cualquier persona y empresa para poder agilizar tus procesos de onboarding, disminuyendo el fraude en tu empresa y ahorrando tiempo y dinero.</p>
+					<p data-i18n="footer.description" class="footer_description">Verifica la identidad de cualquier persona y empresa para poder agilizar tus procesos de onboarding, disminuyendo el fraude en tu empresa y ahorrando tiempo y dinero.</p>
 				</div>
 				<div class="footer_section">
 					<ul>
