fix: figtree font class

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -212,7 +212,7 @@
 
 			<div class="page_section logos_container">
 				<div class="section_header">
-					<h2 class="font_figtree" data-i18n="data.title">Consultamos con bases de datos públicas</h2>
+					<h2 data-i18n="data.title">Consultamos con bases de datos públicas</h2>
 				</div>
 				<div class="logos_carousel">
 					<div class="logos_track">
