--- a/public/html/services.html
+++ b/public/html/services.html
@@ -107,7 +107,7 @@
 				<div class="service_detail_content">
 					<div class="service_detail_text">
 						<h2 data-i18n="service.suppliers.title">Validación de Proveedores</h2>
-						<p data-i18n="service.suppliers.description">Valida al instante los documentos de tus proveedores, evitando fraudes, agilizando el proceso de alta y calculando el riesgo para tomar <strong data-i18n="service.suppliers.highlight">decisiones informadas sobre si vale la pena trabajar con ellos.</strong></p>
+						<p data-i18n="service.suppliers.description">Valida al instante los documentos de tus proveedores, evitando fraudes, agilizando el proceso de alta y calculando el riesgo para tomar decisiones informadas sobre si vale la pena trabajar con ellos.</p>
 						<ul>
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.suppliers.feature1">Verificación automática de documentos fiscales</span></li>
 							<li><span class="material-icons">check_circle</span><span data-i18n="service.suppliers.feature2">Investigación de antecedentes penales</span></li>
